# rose-vecmath

./: CMakeLists.txt  README.md  conanfile.py
include/rose/: vecmath.hpp
include/rose/traits/: traits.hpp
include/rose/vecmath/: mat.hpp  vec.hpp
test/: mat_test.cpp  traits_test.cpp  vec_test.cpp
test_package/: conanfile.py  test_package.cpp
